--- a/BasicCSharp/BasicCSharp/BasicCSharp.csproj
+++ b/BasicCSharp/BasicCSharp/BasicCSharp.csproj
@@ -18,4 +18,7 @@
   <ItemGroup>
     <Compile Remove="Extensions\SimpleCSharpCompiler.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BasicCSharpDemo\BasicCSharpDemo.csproj" />
+  </ItemGroup>
 </Project>
