modify basic points task

--- a/BasicASP.NETMvc/BasicASP.NETMvc/Web.config
+++ b/BasicASP.NETMvc/BasicASP.NETMvc/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <!--Auth Config Begin-->
+    <!--basic points 15 Auth Config Begin-->
     <!--<authentication mode="Forms">
       <forms name="x-token" loginUrl="~/Auth/Login" protection="All" timeout="60" cookieless="UseCookies" />
     </authentication>-->
