modify README.md and add auth

--- a/BasicASP.NETMvc/BasicASP.NETMvc/Web.config
+++ b/BasicASP.NETMvc/BasicASP.NETMvc/Web.config
@@ -12,9 +12,9 @@
   </appSettings>
   <system.web>
     <!--basic points 15 Auth Config Begin-->
-    <!--<authentication mode="Forms">
+    <authentication mode="Forms">
       <forms name="x-token" loginUrl="~/Auth/Login" protection="All" timeout="60" cookieless="UseCookies" />
-    </authentication>-->
+    </authentication>
     <!--Auth Config End-->
     
     <!--Session Config Begin-->
